--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
     testOptions{
         animationsDisabled = true
+        unitTests.returnDefaultValues = true
     }
     buildFeatures {
         viewBinding true
